Fix scrollbar visibility issue (#113)

--- a/docs/src/components/maincontent/maincontent.module.scss
+++ b/docs/src/components/maincontent/maincontent.module.scss
@@ -33,7 +33,7 @@
   width: 100%;
   display: flex;
   box-sizing: border-box;
-  overflow-x: scroll;
+  overflow-x: auto;
   justify-content: center;
 
   .header-anchor {
@@ -45,7 +45,7 @@
 
     position: relative;
     padding: 1rem 1rem 5rem 1rem;
-    overflow-x: scroll;
+    overflow-x: auto;
     box-sizing: border-box;
 
     .row {
